# unpackable

./: .gitignore  README.md  environment.yml  example.py  pyproject.toml
benchmarks/: bench_unpackable.py
src/unpackable/: __init__.py  core.py
tests/: test_unpackable.py
