[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "unpackable-objects"
version = "0.1.0"
description = "Zero-dependency object unpacking for trusted Python data paths."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Ben Mehta"}
]
keywords = [
  "slots",
  "unpacking",
  "serialization",
  "performance",
  "zero-dependency",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/yourname/unpackable-objects"
Repository = "https://github.com/yourname/unpackable-objects"
Issues = "https://github.com/yourname/unpackable-objects/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
unpackable = ["py.typed"]
